fix spacing

--- a/src/pages/case-page/components/structure/ContentBlock/contentblock.module.scss
+++ b/src/pages/case-page/components/structure/ContentBlock/contentblock.module.scss
@@ -10,12 +10,3 @@
 .fullWidth > * {
   width: 100%;
 }
-
-.contentBlockContent {
-  width: 100%;
-}
-
-.contentBlockImgWrapper {
-  width: 100%;
-  margin: 80px 0 40px 0;
-}
